; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_xkeymap.c_update_modifier_state.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_xkeymap.c_update_modifier_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i64 }

@MapLeftShiftMask = common dso_local global i32 0, align 4
@MapRightShiftMask = common dso_local global i32 0, align 4
@MapLeftCtrlMask = common dso_local global i32 0, align 4
@MapRightCtrlMask = common dso_local global i32 0, align 4
@MapLeftAltMask = common dso_local global i32 0, align 4
@MapRightAltMask = common dso_local global i32 0, align 4
@MapLeftWinMask = common dso_local global i32 0, align 4
@MapRightWinMask = common dso_local global i32 0, align 4
@MapNumLockMask = common dso_local global i32 0, align 4
@False = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32, i32)* @update_modifier_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_modifier_state(%struct.TYPE_5__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %99 [
    i32 134, label %9
    i32 129, label %17
    i32 135, label %25
    i32 130, label %33
    i32 136, label %41
    i32 131, label %49
    i32 133, label %57
    i32 128, label %65
    i32 132, label %73
  ]

9:                                                ; preds = %3
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i32, i32* @MapLeftShiftMask, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @MASK_CHANGE_BIT(i64 %13, i32 %14, i32 %15)
  br label %99

17:                                               ; preds = %3
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i32, i32* @MapRightShiftMask, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @MASK_CHANGE_BIT(i64 %21, i32 %22, i32 %23)
  br label %99

25:                                               ; preds = %3
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i32, i32* @MapLeftCtrlMask, align 4
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @MASK_CHANGE_BIT(i64 %29, i32 %30, i32 %31)
  br label %99

33:                                               ; preds = %3
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i32, i32* @MapRightCtrlMask, align 4
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @MASK_CHANGE_BIT(i64 %37, i32 %38, i32 %39)
  br label %99

41:                                               ; preds = %3
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = load i32, i32* @MapLeftAltMask, align 4
  %47 = load i32, i32* %6, align 4
  %48 = call i32 @MASK_CHANGE_BIT(i64 %45, i32 %46, i32 %47)
  br label %99

49:                                               ; preds = %3
  %50 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 0
  %53 = load i64, i64* %52, align 8
  %54 = load i32, i32* @MapRightAltMask, align 4
  %55 = load i32, i32* %6, align 4
  %56 = call i32 @MASK_CHANGE_BIT(i64 %53, i32 %54, i32 %55)
  br label %99

57:                                               ; preds = %3
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %59 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %58, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %59, i32 0, i32 0
  %61 = load i64, i64* %60, align 8
  %62 = load i32, i32* @MapLeftWinMask, align 4
  %63 = load i32, i32* %6, align 4
  %64 = call i32 @MASK_CHANGE_BIT(i64 %61, i32 %62, i32 %63)
  br label %99

65:                                               ; preds = %3
  %66 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %67 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %66, i32 0, i32 0
  %68 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %67, i32 0, i32 0
  %69 = load i64, i64* %68, align 8
  %70 = load i32, i32* @MapRightWinMask, align 4
  %71 = load i32, i32* %6, align 4
  %72 = call i32 @MASK_CHANGE_BIT(i64 %69, i32 %70, i32 %71)
  br label %99

73:                                               ; preds = %3
  %74 = load i32, i32* %6, align 4
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %76, label %98

76:                                               ; preds = %73
  %77 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %78 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 8
  %80 = icmp ne i32 %79, 0
  br i1 %80, label %98, label %81

81:                                               ; preds = %76
  %82 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %83 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %82, i32 0, i32 0
  %84 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %83, i32 0, i32 0
  %85 = load i64, i64* %84, align 8
  %86 = load i32, i32* @MapNumLockMask, align 4
  %87 = call i32 @MASK_HAS_BITS(i64 %85, i32 %86)
  %88 = load i32, i32* @False, align 4
  %89 = icmp eq i32 %87, %88
  %90 = zext i1 %89 to i32
  store i32 %90, i32* %7, align 4
  %91 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %92 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %91, i32 0, i32 0
  %93 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %92, i32 0, i32 0
  %94 = load i64, i64* %93, align 8
  %95 = load i32, i32* @MapNumLockMask, align 4
  %96 = load i32, i32* %7, align 4
  %97 = call i32 @MASK_CHANGE_BIT(i64 %94, i32 %95, i32 %96)
  br label %98

98:                                               ; preds = %81, %76, %73
  br label %99

99:                                               ; preds = %98, %3, %65, %57, %49, %41, %33, %25, %17, %9
  ret void
}

declare dso_local i32 @MASK_CHANGE_BIT(i64, i32, i32) #1

declare dso_local i32 @MASK_HAS_BITS(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
